--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_CONNECT_URI="mongodb://localhost:27017/"
+MONGODB_CONNECT_URI="mongodb+srv://mishrasujit409:6iug249sNpNQgO3b@webservice.mo10i1l.mongodb.net/ticket_booking?retryWrites=true&w=majority"
 GOOGLE_CLIENT_ID="613011644713-8ulrf00dkg201cq3bc4r5855ed2a1qv8.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
