--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "path": "^0.12.7"
   }
