--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.11.11",
     "heroicons": "^2.1.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
