--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,12 @@
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
+    "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
   },
